--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,40 @@
 server:
   port: 9999
 
-
 spring:
+  h2:
+    console:
+      enabled: true
   datasource:
     url: jdbc:h2:mem:develop
     username: sa
     password:
     driver-class-name: org.h2.Driver
+    hikari:
+      maximum-pool-size: 10
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+        jdbc:
+#          batch_size: 50
+          time_zone: UTC
+        order_inserts: true
+        order_updates: true
+        generate_statistics: true
+
+
+
+com:
+  develop:
+    crypto:
+      binance-url: https://api.binance.com/api/v3
+      houbi-url: https://api.huobi.pro
+
+logging:
+  level:
+    root: INFO
+    org.springframework.web: INFO
+    org.springframework.web.FilterChainProxy: INFO
+    org.springframework.web.client.RestTemplate: INFO
+    org.springframework.boot.autoconfigure: INFO
