--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 9999
+  servlet:
+    context-path: /api/v1
 
 spring:
   h2:
@@ -14,16 +16,6 @@ spring:
       maximum-pool-size: 10
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    properties:
-      hibernate:
-        jdbc:
-#          batch_size: 50
-          time_zone: UTC
-        order_inserts: true
-        order_updates: true
-        generate_statistics: true
-
-
 
 com:
   develop:
